# Altair-8800-AI-Edition

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_output.txt  partitions.csv  partitions_8mb.csv  sdkconfig.FREENOVE-ESP32-S3-LCD-2.8.defaults  sdkconfig.LONELY_BINARY_ALTAIR_KIT.defaults  sdkconfig.SEEED_XIAO_ESP32_S3.defaults  sdkconfig.defaults  sdkconfig.freenove  sdkconfig.waveshare  sdkconfig.waveshare.defaults  sitemap.xml
.codex/skills/bds-c/: SKILL.md
.codex/skills/bds-c/agents/: openai.yaml
.codex/skills/mac-asm/: SKILL.md
.github/skills/c89-cpm-z80/: SKILL.md
.github/skills/dcc-cpm-z80/: SKILL.md
.github/skills/mac-asm/: SKILL.md
.github/skills/mac-asm/agents/: openai.yaml
.github/skills/mac-asm/scripts/: check_mac_asm.py
.github/workflows/: docs.yml
Apps/ATTN/: ATTNC89.C  ATTNC89.COM  ATTNC99.COM  attnc99.c  build-attnc99.sh
Apps/AUTORUN/: AUTORUN.ASM  AUTORUN.COM  AUTORUN.SUB
Apps/BUILDALL/: BUILDALL.SUB
Apps/CHAT/: CHAT.C  CHAT.CFG  CHAT.SUB  CHATC89.C  CHATC89.COM
Apps/CLOCK/: CLOCK.C  CLOCK.C89  CLOCK.COM  CLOCK.SUB
Apps/DATE/: DATE.ASM  DATE.SUB  README.md
Apps/EDIT/: EDIT.SUB
Apps/ENV/: ENV.C  ENV.SUB
Apps/ESP32/: ESP32.C
Apps/GAME/: GAME.SUB
Apps/ISAM/: ISAM.SUB
Apps/MANCALA/: MANC89.COM  MANCALA.C  MANCALA.SUB  manc89.c  mancala.sh
Apps/MCPDONE/: MCPDONE.SUB
Apps/SDK/: DXENV.C
Apps/SHEETS/: README.md  SHEETC.C  SHEETS.ASM  SHEETS.C  SHEETS.H  SHEETS.SUB
Apps/VIBE/: VIBE.SUB
Apps/WSPERF/: WSPERF.ASM  WSPERF.SUB
altair8800/: intel8080.c  intel8080.h
altair_local/: CMakeLists.txt  README.md  main.c  web_terminal.c  web_terminal.h  websocket_console.c  websocket_console.h
altair_local/PortDrivers/: io_ports.c  time_io.c  weather_io.c
altair_local/drivers/sense_hat/: graphics.c  graphics.h  led_panel.c  led_panel.h  sense_hat.c  sense_hat.h  sense_hat_panel.c  sense_hat_panel.h
altair_mcp_server/: .gitignore  CMakeLists.txt  README.md  mcp_server.c  run-altair-cpm-mcp.sh
altair_mcp_server/pristine/: bdsc-v1.60.dsk  cpm63k.dsk
disks/: bdsc-v1.60.dsk  cpm63k.dsk  escape-posix.dsk
disks_cpm_3/: apps.dsk  cpm3_56k_disk1.dsk
docker/: Dockerfile  README.md  build-multiarch.sh  compose.yaml  docker-entrypoint.sh
docs/: requirements.txt
docs/docs/en/: index.md
docs/docs/en/40-deploy-with-docker/: 17-start-container.md
docs/docs/en/60-programming/: 01-i8080-IO-Ports.md  06-Front-panel-programming.md
drivers/bt_keyboard/: bt_keyboard.c
drivers/sdcard_esp32/: sdcard_esp32.c  sdcard_esp32.h
front_panel/: altair_panel.c  altair_panel.h  axs15231b_lcd.c  front_panel_kit.c  front_panel_kit.h  panel_display.c  panel_display.h  st7305_rlcd.c  st7305_rlcd.h  virtual_monitor.c  vt100_terminal.c  vt100_terminal.h
main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  config.c  config.h  cpu_disasm.h  cpu_state.c  i8080_disasm.c  idf_component.yml  main.c  network_time.c  network_time.h  status_led.c  websocket_console.c  websocket_console.h  websocket_server.c  wifi.c  wifi_setup.c  wifi_setup.h  z80_disasm.c
port_drivers/: chat_io.c  environment_io.c  environment_io.h  io_ports.c  io_ports.h  time_io.c  weather_io.c  weather_io.h
scripts/: build-host-tools-windows.cmd  start-local-altair-windows.cmd
terminal/: index.html  static_html_hex.h
